Fix crucial issues